@@ -1,3 +1,7 @@
+2012-09-13
+
+	* sylpheed.spec.in: fixed build on x86_64 platform.
+
 2012-08-16
 
 	* src/headerview.c: minor optimization for tooltips.
